--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,12 @@ site_name: My Docs
 site_url: https://klieret.github.io/mkdocs-material-test-mike-deployment
 theme:
   name: material
+plugins:
+- mike:
+    alias_type: symlink
+    redirect_template: null
+    deploy_prefix: ''
+    canonical_version: develop
+    version_selector: true
+    css_dir: css
+    javascript_dir: js
