--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ plugins:
     alias_type: symlink
     redirect_template: null
     deploy_prefix: ''
-    canonical_version: develop
+    canonical_version: latest
     version_selector: true
     css_dir: css
     javascript_dir: js
